<resources>
    <string name="app_name">+1社区</string>
    <string name="ware">警告</string>
    <string name="token_failure">登录已失效，请重新登录</string>
    <string name="not_complete">功能暂未开放,敬请期待</string>
    <string name="change_organization">切换社区</string>
    <string name="change_organization_search">请输入您要查询的</string>
    <string name="first_help_desc">请指定第一救助人，我们将会对指定的第一救助人发出额外短信通知</string>
    <string name="family">家人</string>
    <string name="neigh">隔壁邻居</string>
    <string name="security">物业保安</string>
    <string name="urgent_help">紧急求助</string>
    <string name="first_help_phone_desc">请输入%1$s的电话号码</string>
    <string name="phone_number">电话号码</string>
    <string name="count_down_help_desc">%1$d秒之后如果无操作，将会自动发送紧急信号到附近居民，适用于突发紧急情况</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="agree">同意</string>
    <string name="refuse">拒绝</string>
    <string name="help_protocol">在使用紧急求助前，您必须知晓和同意：紧急求助功能是邻里互助的一部分，是社区邻里自愿参加的互助行为，系统并不能保证大家第一时间获得救助，以及救助的效果，对于救助不及时或者手机系统问题等一律免责，您必须同意此协议，方可使用紧急求助</string>
    <string name="account_data">个人资料</string>
    <string name="account_setting">设置</string>
    <string name="account_share">分享应用</string>
    <string name="account_info">消息中心</string>
    <string name="account_collection">个人收藏</string>
    <string name="account_safe">账户安全</string>
    <string name="logout">退出</string>
    <string name="logout_confirm">退出登陆将会清空所有数据并重置所有操作，确定退出?</string>
    <string name="mobile_format_wrong">联系电话格式有误</string>
    <string name="neighbor_help">邻里互助</string>
    <string name="need_help">我要求助</string>
    <string name="ask_neighbor">问邻居</string>
    <string name="help_neighbor">帮邻居</string>
    <string name="all_kind">所有类别</string>
    <string name="def_priority">默认优先级</string>
    <string name="priority">优&#160;先&#160;级</string>
    <string name="topic">主&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;题</string>
    <string name="kind">类型选择</string>
    <string name="address">地&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;点</string>
    <string name="price">补&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;贴</string>
    <string name="memo">内&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;容</string>
    <string name="aid_mobile">电话号码</string>
    <string name="choose_priority">点击选择优先级</string>
    <string name="normal_priority">一般</string>
    <string name="build">新建</string>
    <string name="add_photo">添加图片</string>
    <string name="help_price">%1$d元补贴</string>
    <string name="help">帮忙</string>
    <string name="answer">回答</string>
    <string name="joiners">参与者</string>
    <string name="format_creator">发起人：%1$s</string>
    <string name="format_subsidy">(%1$d元补贴)</string>
    <string name="format_phone">联系电话：%1$s</string>
    <string name="confirm_help_other">确定帮助他人？</string>
    <string name="confirm_delete_help">确定删除这条求助？</string>
    <string name="confirm_cancel_help">确定不能提供帮助了？</string>
    <string name="accepted">已接受</string>
    <string name="take_in">已采纳</string>
    <string name="evaluation">评价</string>
    <string name="pension_education">老年教育</string>
    <string name="pension_university">老年大学</string>
    <string name="community_university">社区讲堂</string>
    <string name="net_university">网络大学</string>
    <string name="health_service">健康服务</string>
    <string name="government">阳光政务</string>
    <string name="pharmacy">便民药房</string>
    <string name="accompany_service">陪同服务</string>
    <string name="health_chair">健康讲堂</string>
    <string name="health_book">健康刊物</string>
    <string name="health_blog">专家博客</string>
    <string name="pension_agency">养老机构</string>
    <string name="rank">评价</string>
    <string name="reservation">预约</string>
    <string name="enter_provider">进入商家</string>
    <string name="format_provider">提供商：%1$s</string>
    <string name="introduction">简介</string>
    <string name="reservation_desc">确定要预约该服务吗?</string>
    <string name="equipment">设施设备</string>
    <string name="attention">注意事项</string>
    <string name="provide_service">提供的服务</string>
    <string name="agency_introduction">机构简介</string>
    <string name="environment">环境</string>
    <string name="roomType">房型</string>
    <string name="format_bedsCount">床位数：</string>
    <string name="confirm_order">确认订单</string>
    <string name="def_contract">个人信息</string>
    <string name="reservation_time">预约日期</string>
    <string name="occupant_info">入住者信息登记</string>
    <string name="add_contact">新增预约信息</string>
    <string name="reservation_info">预约者信息登记</string>
    <string name="name">姓名</string>
    <string name="birthday">出生日期</string>
    <string name="check_in_time">入住日期</string>
    <string name="relation">您与入住人的关系</string>
    <string name="sex">性别</string>
    <string name="health_status">健康状况</string>
    <string name="add_new_info">添加新的信息</string>
    <string name="checkIn_info_list">信息列表</string>
    <string name="community_activity">社区活动</string>
    <string name="add_activity">发起活动</string>
    <string name="activity_title">活动主题</string>
    <string name="activity_time">开始时间</string>
    <string name="activity_end_time">结束时间</string>
    <string name="activity_repeat_type">周期活动类型</string>
    <string name="activity_repeat">活动期限</string>
    <string name="activity_repeat_">定期活动：%1$s</string>
    <string name="activity_require">加入要求</string>
    <string name="activity_content">活动描述</string>
    <string name="activity_maxPartner">邀请人数</string>
    <string name="activity_location">邀约区域</string>
    <string name="confirm_join_activity">确定参加这个活动吗？</string>
    <string name="confirm_cancel_activity">确定取消这个活动吗？</string>
    <string name="confirm_quite_activity">确定退出这个活动吗？</string>
    <string name="confirm_no_ivatar">您未上传头像，确定不上传么？</string>
    <string name="joined">已参加</string>
    <string name="join">参加</string>
    <string name="quit">退出</string>
    <string name="residential_service">居家服务</string>
    <string name="price_format">%1$d元</string>
    <string name="new_service">发布服务</string>
    <string name="all_orders">所有订单</string>
    <string name="my_orders">订单管理</string>
    <string name="format_price">价格：%1$d元</string>
    <string name="put_status">更新状态</string>
    <string name="status_reserved">已预约</string>
    <string name="status_assigned">已受理</string>
    <string name="status_done">已完成</string>
    <string name="status_cancel">已取消</string>
    <string name="status_assessed">已评价</string>
    <string name="status_delayed">已延期</string>
    <string name="operate_assigned">受理订单</string>
    <string name="operate_done">完成订单</string>
    <string name="operate_cancel">取消订单</string>
    <string name="order_detail">订单详情</string>
    <string name="order_call_situation">外呼情况</string>
    <string name="write_call_situation">预约情况填写</string>
    <string name="status_shouli">受理</string>
    <string name="status_delay">延期</string>
    <string name="welcome">欢迎来到+1社区</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="mobile_number">电话号码</string>
    <string name="password">密码</string>
    <string name="password_again">确认密码</string>
    <string name="show">显示</string>
    <string name="choose">选择</string>
    <string name="connect_phone_">联系电话：%1$s</string>
    <string name="connect_person_">联系人：%1$s</string>
    <string name="course_sign_date_">报名时间：%1$s</string>
    <string name="course_during_date_">课程时间：%1$s</string>
    <string name="course_start_end_time_">上课时间：%1$s</string>
    <string name="join_in">报名</string>
    <string name="cancle">取消</string>
    <string name="say_some">说点什么吧</string>
    <string name="course_plan">教学计划</string>
    <string name="course_desp">课程简介</string>
    <string name="service_provider">进入该服务提供商</string>
    <string name="question">提问</string>
    <string name="activity_time_">活动时间：%1$s</string>
    <string name="originator_person_">发起人：%1$s</string>
    <string name="participation_request">参与要求</string>
    <string name="activity_address">活动地点</string>
    <string name="activity_address_">活动地址：%1$s</string>
    <string name="course">课程</string>
    <string name="information_center">消息中心</string>
    <string name="system_information">系统消息</string>
    <string name="personal_information">个人消息</string>
    <string name="personal_setting">个人资料信息</string>
    <string name="save">保存</string>
    <string name="ongoing">进行中</string>
    <string name="finished">已结束</string>
    <string name="has_partin">已参加:%1$s人</string>
    <string name="has_sign_up">已报名:%1$s人</string>
    <string name="sign_up">加入</string>
    <string name="sign_up_back">退出</string>
    <string name="targart_partin_">参与人数：%1$s</string>
    <string name="single">单次</string>
    <string name="cyclical">周期</string>
    <string name="detail">查看详情</string>
    <string name="choice_type">类型选择</string>
    <string name="pls_choice_type">请选择类型</string>
    <string name="activity_cyclical">周期活动</string>
    <string name="cyclical_gap_hint">（例：每周一下午14:30）</string>
    <string name="activity_content_require">请输入活动详情描述和参与要求</string>
    <string name="partin_info">温馨提示：邀请人数不填，则为不限人数</string>
    <string name="has_joined">已加入</string>
    <string name="unjoined">未加入</string>
    <string name="activity_title_hint">请输入活动主题</string>
    <string name="activity_address_hint">请输入活动地点</string>
    <string name="start_time_hint">请选择开始时间</string>
    <string name="end_time_hint">请选择结束时间</string>
    <string name="activity_maxPartner_hint">请输入邀请人数</string>
    <string name="register_step1_title">你的姓名？</string>
    <string name="forget_password_">忘记密码？</string>
    <string name="user_name">姓名</string>
    <string name="register_code">验证码</string>
    <string name="tourism">旅游</string>
    <string name="popular_destination">热门目的地</string>
    <string name="popular_journey">热门旅游</string>
    <string name="hiking">徒步游</string>
    <string name="by_car">自驾游</string>
    <string name="parents">爸妈游</string>
    <string name="honey_moon">蜜月游</string>
    <string name="domestic">国内游</string>
    <string name="near">周边游</string>
    <string name="multinational">国际游</string>
    <string name="parenting">亲子游</string>
    <string name="destination">出发到达</string>
    <string name="traffic_detail">交通详情</string>
    <string name="accommodation_standard">住宿标准</string>
    <string name="journey_attractions">旅游景点</string>
    <string name="gather_location">集合地点</string>
    <string name="fee_info">费用信息</string>
    <string name="route_feature">路线特色</string>
    <string name="book_notice">预定须知</string>
    <string name="belong_area">所在地区</string>
    <string name="belong_stress">所在街道/社区/小区</string>
    <string name="belong_stress_hint">请点击选择一个街道</string>
    <string name="belong_area_hint">请点击选择一个地区</string>
    <string name="belong_communite">详细地址</string>
    <string name="belong_communite_hint">请填写你的详细地址</string>
    <string name="common_address">/地球村/中国/</string>
    <string name="sign_up_list">参与者列表</string>
    <string name="more_question">查看更多提问</string>
    <string name="activity_detail">活动详情</string>
    <string name="activity_type_">活动类型:%1$s</string>
    <string name="activity_start">开始时间：</string>
    <string name="activity_start_">开始时间：%1$s</string>
    <string name="activit_creator_">发起人：%1$s</string>
    <string name="activity_desp">活动描述</string>
    <string name="activity_evaluate">综合评价</string>
    <string name="want_evaluate">我要评价</string>
    <string name="my_evaluate">我的评价</string>
    <string name="activity_question_list_">提问列表(%1$s)</string>
    <string name="question_hint">请输入您的提问内容</string>
    <string name="quest_verif_code">获取验证码</string>
    <string name="please_input_phone">请输入手机号码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_password_again">请再次输入密码</string>
    <string name="please_input_verif_code">请输入验证码</string>
    <string name="my_nickname">我的昵称</string>
    <string name="please_input_nickname">请输入昵称</string>
    <string name="register_info">请如实填写您的注册信息，验证码30分钟有效</string>
</resources>