<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/dp_30">


    <TextView
        style="@style/tv_line_space"
        android:layout_marginTop="@dimen/dp_22"
        android:text="@string/first_help_desc"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:id="@+id/tv_family"
        style="@style/tv_normal_ellipsize"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_50"
        android:text="@string/family" />

    <TextView
        android:id="@+id/tv_neighbor"
        style="@style/tv_normal_ellipsize"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/neigh" />

    <TextView
        android:id="@+id/tv_security"
        style="@style/tv_normal_ellipsize"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/security" />


    <Button
        android:id="@+id/btn_cancel_help"
        style="@style/btn_red_deep"
        android:layout_marginTop="@dimen/dp_80"
        android:text="@string/cancel" />

</LinearLayout>