<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="30dp"
    >


    <TextView
        style="@style/tv_line_space"
        android:text="@string/help_protocol" />



    <Button
        android:id="@+id/btn_agree_protocol"
        android:layout_marginTop="30dp"
        style="@style/btn_red_deep"
        android:gravity="center"
        android:text="@string/agree"
        />

    <Button

        android:id="@+id/btn_refuse_protocol"
        style="@style/btn_red_deep"
        android:text="@string/refuse"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="10dp"
        />
</LinearLayout>