<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
   >


    <TextView
        style="@style/tv_line_space"
        android:paddingStart="@dimen/dp_40"
        android:paddingEnd="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_22"
        android:text="@string/help_protocol" />



    <Button
        android:lineSpacingMultiplier="1.5"
        android:id="@+id/btn_agree_protocol"
        android:layout_marginTop="@dimen/dp_120"
        style="@style/btn_red_deep"
        android:gravity="center"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:text="@string/agree"
         />

    <Button

        android:id="@+id/btn_refuse_protocol"
        style="@style/btn_red_deep"
        android:text="@string/refuse"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_2"
        android:layout_marginBottom="@dimen/dp_22"
         />
</LinearLayout>